tests/data/arff/invalid/string_label_with_whitespace.arff
@RELATION name

@ATTRIBUTE first    NUMERIC
@ATTRIBUTE second   numeric
@ATTRIBUTE class    {foo, Hello World}

@DATA
-1.117827500607882,-2.9087188881250993,foo
-0.5282118298909262,-0.335880984968183973,Hello World
